Bug 88630 - Themes and locales do not change when using turbo. r=vishy/sr=blake/PDT+