mozilla/xpfe/appshell/src/nsAppShellService.cpp
@@ -73,6 +73,9 @@ static NS_DEFINE_CID(kPrefCID, NS_PREF_CID);
 static char *gEQActivatedNotification = "nsIEventQueueActivated";
 static char *gEQDestroyedNotification = "nsIEventQueueDestroyed";
 
+NS_NAMED_LITERAL_STRING(gSkinSelectedTopic, "skin-selected");
+NS_NAMED_LITERAL_STRING(gLocaleSelectedTopic, "locale-selected");
+
 nsAppShellService::nsAppShellService() : 
   mAppShell( nsnull ),
   mWindowList( nsnull ),
@@ -895,6 +898,10 @@ NS_IMETHODIMP nsAppShellService::Observe(nsISupports *aSubject,
       if (isNative)
         mAppShell->ListenToEventQueue(eq, PR_FALSE);
     }
+  } else if (topic.Equals(gSkinSelectedTopic) ||
+             topic.Equals(gLocaleSelectedTopic)) {
+    if (mNativeAppSupport)
+      mNativeAppSupport->SetIsServerMode(PR_FALSE);
   }
   return NS_OK;
 }
@@ -920,9 +927,13 @@ void nsAppShellService::RegisterObserver(PRBool aRegister)
     if (aRegister) {
       os->AddObserver(weObserve, topicA.GetUnicode());
       os->AddObserver(weObserve, topicB.GetUnicode());
+      os->AddObserver(weObserve, gSkinSelectedTopic.get());
+      os->AddObserver(weObserve, gLocaleSelectedTopic.get());
     } else {
       os->RemoveObserver(weObserve, topicA.GetUnicode());
       os->RemoveObserver(weObserve, topicB.GetUnicode());
+      os->RemoveObserver(weObserve, gSkinSelectedTopic.get());
+      os->RemoveObserver(weObserve, gLocaleSelectedTopic.get());
     }
     nsServiceManager::ReleaseService(NS_OBSERVERSERVICE_CONTRACTID, glop);
   }
